# Referral-FastAPI

./: .env_example.dev  .env_example.prod  .env_example.test  .gitignore  README.md  alembic.ini  docker-compose.yml  main.py  pyproject.toml
docker/: Dockerfile  Dockerfile.celery  Dockerfile.nginx  nginx.conf  postgres_waiting.sh
src/: app.py  exceptions.py  settings.py
src/adapters/api/: app.py
src/adapters/api/routers/: __init__.py  ref_codes.py  users.py
src/adapters/celery/: email_templates.py  main.py  pyproject.toml  tasks.py
src/adapters/celery_t/: __init__.py  main.py
src/alembic/: env.py
src/alembic/versions/: 2024_03_14_173152-19792d7102ce_initial_migration.py  2024_03_15_020808-dff0300e2336_referrals.py
src/api/: __init__.py
src/api/ref_codes/: router.py
src/api/users/: auth.py  dependencies.py  router.py
src/core/dao/: base_dao.py  referrals_dao.py  users_dao.py
src/core/ref_codes/: codes.py  schemas.py
src/core/users/: auth.py  dependencies.py  schemas.py
src/dao/: __init__.py  codes_dao.py
src/db/: __init__.py  base.py  engine.py
src/db/models/: __init__.py  ref_codes.py  referrals.py  users.py
tests/: conftest.py  mock_referral_codes.json  mock_referrals.json  mock_users.json
tests/unit_tests/test_users/: test_users.py
